# Postmortem_RAG

./: .env.example  .gitignore  README.md  architecture.md  docker-compose.yml  pyproject.toml  todo.md
agents/: graph.py  query_analyzer.py  retriever_node.py  self_reflection.py  state.py  synthesizer.py
data/ingestion/: blog_scraper.py  content_extractor.py  github_scraper.py  runbook_loader.py  structured_extractor.py
evaluation/: ablation_study.py  ragas_evaluator.py  synthetic_qa_generator.py
evaluation/results/: ablation_results.md  eval_dense.json  eval_hybrid.json  eval_hybrid_rerank.json  eval_sparse.json  qa_pairs.json
indexing/: bm25_index.py  chroma_store.py  chunking.py  embedder.py  pipeline.py
retrieval/: dense_retriever.py  hybrid_retriever.py  reranker.py  sparse_retriever.py
ui/: app.py
