[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "postmortem-rag"
version = "0.1.0"
description = "Production-grade RAG system over incident post-mortems with LangGraph agentic reasoning"
requires-python = ">=3.11"
dependencies = [
    # Data ingestion
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "trafilatura>=1.10.0",
    # Embeddings + LLMs
    "google-generativeai>=0.8.0",
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "tiktoken>=0.7.0",
    # Vector store
    "chromadb>=0.5.0",
    # Sparse retrieval
    "rank-bm25>=0.2.2",
    # Reranking
    "cohere>=5.5.0",
    # LangGraph / LangChain
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-community>=0.2.0",
    "langgraph>=0.1.0",
    "langsmith>=0.1.0",
    # Evaluation
    "ragas>=0.1.9",
    "datasets>=2.19.0",
    # UI
    "streamlit>=1.35.0",
    # Utils
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
    "tqdm>=4.66.0",
    "rich>=13.7.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
# unstructured has heavy C deps — only needed if you want PDF/DOCX parsing
# install with: pip install "unstructured[html,md]"
parsing = [
    "unstructured[html,md]>=0.11.0",
    "llama-index-core>=0.10.0",
    "llama-index-readers-file>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["data*", "indexing*", "retrieval*", "agents*", "evaluation*", "ui*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
